<resources>
    <string name="app_name">Gazeus</string>
    <string name="text_code">Id:</string>
    <string name="text_node_id">Node Id: </string>
    <string name="text_name">Nome:</string>
    <string name="text_full_name">Nome Completo: </string>
    <string name="text_owner">Proprietário: </string>
    <string name="search_title"> Buscar</string>
    <string name="text_not_repo_name_user">Não foi encontrado o repositório com esHomete nome</string>
</resources>